test/compile_errors/err_pub_const_requires_type.w
//! expect-error: public const declarations require an explicit type annotation

pub const X = 1

fn main:
    let _ = X
